deployment/sa-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sa-frontend
spec:
  replicas: 1
  minReadySeconds: 15
  selector:
    matchLabels:
      app: sa-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: sa-frontend
    spec:
      containers:
      - image: huuduc2107/sentiment-analysis-frontend:2
        imagePullPolicy: Always
        name: sa-frontend
        ports:
          - containerPort: 80
