deployment/sa-logic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: sa-logic
  name: sa-logic
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sa-logic
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: sa-logic
    spec:
      containers:
        - image: rinormaloku/sentiment-analysis-logic:feedback
          name: sa-logic
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
