deployment/sa-webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: sa-webapp
  name: sa-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sa-webapp
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: sa-webapp
    spec:
      containers:
        - env:
            - name: SA_LOGIC_API_URL
              value: http://sa-logic:5000
          image: rinormaloku/sentiment-analysis-web-app:feedback
          name: sa-webapp
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
