deployment/sa-feedback-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: sa-feedback
  name: sa-feedback
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 80
  selector:
    io.kompose.service: sa-feedback
status:
  loadBalancer: {}
