deployment/service-sa-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-frontend
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sa-frontend
