deployment/service-sa-logic.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-logic
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: sa-logic
