deployment/service-sa-web-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-web-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: sa-web-app
