deployment/ingress-sa-feedback.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sa-ingress-feedback
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /feedback
        pathType: Prefix
        backend:
          service:
            name: sa-feedback
            port:
              number: 80
