deployment/ingress-sa-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sa-ingress-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sa-frontend
            port:
              number: 80
