deployment/ingress-sa-web-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sa-ingress-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: webapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sa-web-app
            port:
              number: 8080
